<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="26dp"
        android:text="@string/ftp_server"
        android:textColor="@color/FontColor"
        android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/port"
                android:textSize="24sp" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/PortEditTextNumberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/state"
            android:textSize="24sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/StatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/FontColor"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/AddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/addresses"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Address1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="@color/FontColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Address2TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="@color/FontColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Address3TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textColor="@color/FontColor"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textSize="26sp" />

        <Space
            android:layout_width="26dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textSize="26sp" />
    </LinearLayout>
</LinearLayout>